--- a/CBI/blast/module.lua.tmpl
+++ b/CBI/blast/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: programming, scripting")
 whatis("URL: https://blast.ncbi.nlm.nih.gov/Blast.cgi, https://www.ncbi.nlm.nih.gov/books/NBK131777/ (changelog)")
 whatis([[
 Description: BLAST finds regions of similarity between biological sequences. The program compares nucleotide or protein sequences to sequence databases and calculates the statistical significance.
-Example: `blastx -version`
+Examples: `blastx -version`
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
